syntax = "proto3";
package channelBuilder;

message Message {
  oneof type {
    PeerPair pair = 1;
    bool ping = 2;
    bool pong = 3;
  }
}


message PeerPair {
  PeerInfo initiator = 1;
  PeerInfo passive = 2;
}

message PeerInfo {
  uint32 id = 1;
  string wss = 2;
  bool wsSupported = 3;
  bool wsTried = 4;
  bool dcSupported = 5;
  bool dcTried = 6;
}
